# torrent-ds

./: .gitignore  Pipfile  README.md  config.ini  config.ini.sample  credentials.ini  credentials.ini.sample  install.sh  pyproject.toml  setup.py  torrent-ds.py
.github/workflows/: publish_package.yml
tools/: get_data.sh  read_data.py
torrent_ds/: config.py  creds.py  data.py  download.py  error.py  logger.py  torrent_ds.py  util.py
torrent_ds_tools/: read_data.py
torrentds/: config.py  creds.py  data.py  download.py  logger.py  util.py
