[tool.poetry]
name = "torrent-ds"
version = "1.6.0"
description = "Manage downloads using ncoreparser package."
authors = ["Aron Radics <aron.radics.jozsef@gmail.com>"]
license = "MIT"
readme = "Readme.md"
homepage = "https://github.com/radaron/torrent-ds"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "==3.3.2"
sqlalchemy = "==1.3.16"
ncoreparser = "*"
transmissionrpc-ng = "==0.12.0"
pyopenssl = "==19.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
