[tool.poetry]
name = "torrent_ds"
version = "2.0.2"
description = "Manage downloads using ncoreparser package."
authors = ["Aron Radics <aron.radics.jozsef@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "torrent_ds"},
            {include = "torrent_ds_tools"}]
homepage = "https://github.com/radaron/torrent-ds"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "==3.3.2"
sqlalchemy = "==1.3.16"
ncoreparser = "*"
transmissionrpc-ng = "==0.12.0"
pyopenssl = "==19.1.0"

[tool.poetry.scripts]
torrent-ds = 'torrent_ds.torrent_ds:main'
torrent-ds-data = 'torrent_ds_tools.read_data:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
